committing lost change

--- a/templates/websensor.cfg
+++ b/templates/websensor.cfg
@@ -50,52 +50,52 @@ define command{
 # em08B/ em32 Websensor Commands
 define command{
         command_name check_em08_temp
-        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor temp --limits="$ARG1$,$ARG2$" --timeout default
+        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor temp --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
 
 define command{
         command_name check_em08_humidity
-        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor hum --limits="$ARG1$,$ARG2$" --timeout default
+        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor hum --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
 
 define command{
         command_name check_em08_light
-        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor illum --limits="$ARG1$,$ARG2$" --timeout default
+        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor illum --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
 
 # em08B Websensor External Module
 # RTD/Thermistor Module for the Websensor
 define command{
         command_name check_em08_thermistor
-        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor thermistor --limits="$ARG1$,$ARG2$" --timeout default
+        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor thermistor --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
 define command{
         command_name check_em08_rtd
-        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor thermistor --limits="$ARG1$,$ARG2$" --timeout default
+        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor thermistor --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
 
 # Voltage Measurement Module for the Websensor
 define command{
         command_name check_em08_voltage
-        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor voltage --limits="$ARG1$,$ARG2$" --timeout default
+        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor voltage --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
 
 # Contact Closure detection for the Websensor
 define command{
         command_name check_em08_contact
-        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor contact --limits="$ARG1$,$ARG2$" --timeout default
+        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor contact --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
 define command{
         command_name check_em08_contacts
-        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor contact --limits="$ARG1$,$ARG2$" --timeout default
+        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor contact --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
 
 # Flood or water detection for the Websensor
 define command{
         command_name check_em08_flood
-        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor flood --limits="$ARG1$,$ARG2$" --timeout default
+        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor flood --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
 define command{
         command_name check_em08_doorSwitch
-        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor contact --limits="$ARG1$,$ARG2$" --timeout default
+        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor contact --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
