--- a/esensors-websensor/templates/websensor.cfg
+++ b/esensors-websensor/templates/websensor.cfg
@@ -31,71 +31,59 @@ define service{
 
 # 'check_temp' command definition
 define command{
-        command_name check_em01_temp
+        command_name check_esensor_temp_txt
         command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device em01 --sensor temp --limits="$ARG1$,$ARG2$" --timeout default
         }
 
 # 'check_humidity' command definition
 define command{
-        command_name check_em01_humidity
+        command_name check_esensor_humidity_txt
         command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device em01 --sensor hum --limits="$ARG1$,$ARG2$" --timeout default
         }
 
 # 'check_light command definition
 define command{
-        command_name check_em01_light
+        command_name check_esensor_light_txt
         command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device em01 --sensor illum --limits="$ARG1$,$ARG2$" --timeout default
         }
 
 # em08B/ em32 Websensor Commands
 define command{
-        command_name check_em08_temp
+        command_name check_esensor_temp
         command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor temp --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
 
 define command{
-        command_name check_em08_humidity
+        command_name check_esensor_humidity
         command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor hum --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
 
 define command{
-        command_name check_em08_light
+        command_name check_esensor_light
         command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor illum --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
 
 # em08B Websensor External Module
 # RTD/Thermistor Module for the Websensor
 define command{
-        command_name check_em08_thermistor
-        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor thermistor --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
-        }
-define command{
-        command_name check_em08_rtd
+        command_name check_esensor_thermistor
         command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor thermistor --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
 
 # Voltage Measurement Module for the Websensor
 define command{
-        command_name check_em08_voltage
+        command_name check_esensor_voltage
         command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor voltage --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
 
 # Contact Closure detection for the Websensor
 define command{
-        command_name check_em08_contact
-        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor contact --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
-        }
-define command{
-        command_name check_em08_contacts
+        command_name check_esensor_contact
         command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor contact --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
 
 # Flood or water detection for the Websensor
 define command{
-        command_name check_em08_flood
+        command_name check_esensor_flood
         command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor flood --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
-        }
-define command{
-        command_name check_em08_doorSwitch
-        command_line $USER1$/check_esensor.pl --host $HOSTADDRESS$ --port $ARG3$ --device xml --sensor contact --limits="$ARG1$,$ARG2$" --timeout default $ARG4$
         }
